# HW10_DJANGO

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py
hw_project/quotes/static/quotes/: style.css
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: signin.html
hw_project/utils/: migration.py
