[tool.poetry]
name = "hw10-django"
version = "0.1.0"
description = ""
authors = ["Rostyslav Bysko <132708200+RostislavB74@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
